--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore:
-  firebase_auth:
-  firebase_core:
+  cloud_firestore: ^0.12.9+2
+  firebase_auth: ^0.14.0+5
+  firebase_core: ^0.4.0+1
+  cloud_functions: ^0.4.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
